:wrench: Fix legend on mobile.

--- a/markup/modules/page-slider/page-slider.styl
+++ b/markup/modules/page-slider/page-slider.styl
@@ -9,6 +9,8 @@
   &:last-child
     padding-bottom: 0
 
+  @media only screen and (max-width: $palmtopWidth)
+    min-height: initial
 
 .detached-screen__machine-header-open
   padding-top: 100px !important
