--- a/markup/modules/ulsp/ulsp.styl
+++ b/markup/modules/ulsp/ulsp.styl
@@ -47,10 +47,16 @@
   .detached-screen__machine
     padding-bottom: 0 !important
 
+  .wbt-rotator-titles_item__active .wbt-rotator-titles_text
+    color: #fff !important;
+
   .wbt-rotator-legend
     position: static
 
   .wbt-rotator__loaded .wbt-rotator-legend
+    background: #fff;
+    border-radius: 0;
+    overflow: initial;
     width: 100%
 
   .wbt-rotator-titles_list
